# ctx

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  Cargo.toml  Cross.toml  MODULE.bazel  README.md  SECURITY.md  manager-exec-plan.md
.buildkite/: ci-toolchain.sh  pipeline.yml  prepare-desktop-package.sh  run-bazel.sh  run-cli-linux.sh  run-cli-windows.ps1  run-desktop-package-linux.sh  run-desktop-package-macos.sh  validate-pipeline.sh
apps/ctx-dashboard/: README.md  index.html  package-lock.json  package.json  site-preview.html  tailwind.config.js
apps/work-recorder-dashboard/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
contracts/agent-history-v1/: README.md  schema.json
core/: BUILD.bazel  Makefile  package.json  pnpm-lock.yaml
core/apps/web/: BUILD.bazel  package.json
core/apps/web/src/components/: ComposerAutocompleteMenu.tsx
core/apps/web/src/pages/launcher/: LauncherPageController.test.tsx  LauncherPageController.tsx
core/apps/web/src/pages/workReport/: WorkReportView.test.tsx  WorkReportView.tsx
core/apps/web/src/pages/workbenchShell/: pluginCommandProjection.test.ts  pluginCommandProjection.ts  pluginWorkbenchContributionProjection.test.ts  pluginWorkbenchContributionProjection.ts
core/apps/web/src/state/: pluginRegistryStore.test.ts  pluginRegistryStore.ts  useComposerAutocomplete.test.tsx  useComposerAutocomplete.ts
core/apps/web/src/styles/: workbench.css
core/apps/web/src/utils/: protocolSlashCommands.test.ts  protocolSlashCommands.ts
core/apps/web/src/utils/analytics/: activity.test.ts  activityIncidents.ts  client.test.ts  client.ts  context.test.ts  context.ts
crates/ctx-cli/: BUILD.bazel  Cargo.toml  build.rs
crates/ctx-cli/src/: analytics.rs  config.rs  docs.rs  identity.rs  import_diagnostics.rs  main.rs  mcp.rs  net.rs  progress.rs  provider_args.rs  search_render.rs  semantic.rs  skill.rs  transcript.rs  updates.rs  upgrade.rs
crates/ctx-cli/src/commands/: import.rs  index.rs  search.rs  setup.rs  sources.rs  sql.rs  status.rs
crates/ctx-cli/src/commands/import/: catalog.rs  explicit.rs  native.rs  native_tests.rs
crates/ctx-cli/src/integrations/: mcp.rs  mcp_tests.rs  slash_commands.rs
crates/ctx-cli/src/mcp/: text.rs
crates/ctx-cli/src/semantic/: cache_paths.rs  cpu_model_cache.rs  cpu_model_cache_tests.rs  daemon.rs  embedding_backend.rs  health_search.rs  indexing.rs  paths_status.rs  preamble.rs  query_service_transport.rs  tests.rs  vector_store_schema.rs  vector_store_search.rs  vector_store_state.rs
crates/ctx-cli/src/skill/: agents.rs  paths.rs  tests.rs
crates/ctx-cli/src/upgrade/: command.rs
crates/ctx-cli/tests/: analytics.rs  cli.rs  cli_public_help_docs.rs  index.rs  mcp.rs  mcp_integration_e2e.rs  native_provider_partial.rs  native_provider_real_shapes.rs  search_show_locate_sql.rs  setup_sources_import.rs  skill.rs  slash_command_e2e.rs  upgrade.rs
crates/ctx-cli/tests/support/: assertions.rs  fixtures.rs  history_plugins.rs  runner.rs
crates/ctx-cli/tests/support/native_fixtures/: json_tree.rs
crates/ctx-history-capture/: Cargo.toml
crates/ctx-history-core/: Cargo.toml
crates/ctx-history-search/: Cargo.toml
crates/ctx-history-store/: Cargo.toml
crates/ctx-protocol/: Cargo.toml
crates/ctx-protocol/src/: lib.rs
crates/ctx-sdk/: Cargo.toml  README.md
crates/ctx-sdk/src/: lib.rs
crates/work-record-capture/: Cargo.toml
crates/work-record-core/: Cargo.toml
crates/work-record-store/: Cargo.toml
docs/: README.md  agent-skill-install.md  agent-storage-coverage.md  agent-usage.md  agent-work-model.mdx  cli-reference.md  dependency-license-audit.md  first-10-minutes.md  freebsd-release-worker.md  getting-started.md  history-source-plugin-design.md  history-source-plugins.md  index.mdx  limitations.md  local-semantic-search-ship-plan.md  mcp-integrations.md  mcp.md  plugin-contribution-contract.mdx  privacy-storage.md  product-contract.md  production-readiness.md  provider-storage-proof.md  provider-support-matrix.json  provider-support.md  providers.md  redaction-corpus.md  release-install.md  release-r2-layout.md  release-supply-chain.md  sdk-production-readiness.md  sdks.md  search.md  security-checks.md  slash-command-integrations.md  sql.md  storage.md  testing-taxonomy.md  threat-model.md  troubleshooting.md  unmanaged-installs.md  (+5 more)
docs/contracts/: json.md
docs/development/: bazel.md
release/: completion-certificate-template.md  r2-artifact-layout.json
schemas/: BUILD.bazel  validate-json-schemas.mjs  validate-json-schemas.test.mjs
schemas/plugins/: plugin-manifest.v1.schema.json
scripts/: attest-macos-runtime-release-archive.sh  audit-search-mvp-package.sh  bazel-test.sh  build-linux-release-offline.sh  build-public-cli-artifact.sh  buildkite-public-ci.sh  check-agent-history-contract.py  check-agent-storage-coverage.py  check-buildkite-pipeline.sh  check-docs.sh  check-loc-exceptions.tsv  check-public-cli-artifact.sh  check-release-binary-compat.sh  check-sdk-no-publish.sh  check-sdks.sh  check.sh  ci-common.sh  ci-windows-bash.cmd  ci-windows.ps1  dashboard-review-dogfood.sh  generate-openrouter-provider-history.py  install-path-smoke.sh  install.ps1  install.sh  prepare-linux-release-inputs.sh  public-cli-runtime-authority.sh  real-harness-common.sh  release-candidate-metadata.sh  release-completion-certificate.sh  release-dry-run.sh  release-finished-product-evidence.sh  release-platform-blocker.sh  release-provider-live-e2e-lanes.sh  release-r2-staging-readback-proof.sh  release-r2-staging-smoke.sh  release-supply-chain-proof.sh  run-macos-release-signing.sh  run-native-candidate-smoke.ps1  run-native-candidate-smoke.sh  run-openrouter-provider-e2e-infisical.sh  (+8 more)
scripts/search_eval/model_eval/: Cargo.toml
scripts/search_eval/model_eval/src/: main.rs
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: dogfood_local.py
sdks/python/src/ctx_agent_history/: __init__.py  agent_history_v1.py  client.py  config.py  errors.py  transport.py  types.py  version.py
sdks/python/tests/: test_client.py
(+357 files in other folders)
