load("@aspect_rules_js//js:defs.bzl", "js_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "json_schemas",
    srcs = glob(["**/*.json"]),
)

js_test(
    name = "json_syntax_test",
    entry_point = "validate-json-schemas.mjs",
    data = [
        ":json_schemas",
        "//core:node_modules/ajv",
    ],
    args = ["$(locations :json_schemas)"],
)

js_test(
    name = "validate_json_schemas_unit_test",
    entry_point = "validate-json-schemas.test.mjs",
    data = [
        "validate-json-schemas.mjs",
        "//core:node_modules/ajv",
    ],
)
