[package]
name = "ctx"
version = "0.23.0"
description = "Local CLI for indexing and searching agent session history"
edition.workspace = true
autobins = false
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools"]
keywords = ["agent", "cli", "search", "sqlite"]

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
clap_mangen.workspace = true
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
ring.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2.workspace = true
toml_edit = "0.22"
ureq = { version = "2.10", default-features = true }
uuid.workspace = true
ctx-history-capture = { path = "../ctx-history-capture" }
ctx-history-core = { path = "../ctx-history-core" }
ctx-history-search = { path = "../ctx-history-search" }
ctx-history-store = { path = "../ctx-history-store" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
tempfile.workspace = true
