[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-agent-history"
version = "0.1.0a0"
description = "Experimental Python SDK for the ctx agent-history-v1 API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ctx" }]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ctx_agent_history = ["py.typed"]

[tool.ctx]
publish = false
publish_reason = "experimental in-repo SDK; package-manager publishing deferred"
